<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="@drawable/background_1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="98dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView71"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_extra_bold_italic"
                android:gravity="end"
                android:text="@string/bet_u"
                android:textColor="@color/orange"
                android:textSize="@dimen/label"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/tvTittle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_extra_bold_italic"
                android:text="@string/match_u"
                android:textSize="@dimen/label"
                android:textStyle="bold|italic" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="60dp" />

        <Button
            android:id="@+id/btTables"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:background="@drawable/my_button"
            android:fontFamily="@font/montserrat_extra_bold_italic"
            android:text="@string/table"
            android:textSize="38sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <Button
            android:id="@+id/btNews"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:background="@drawable/my_button"
            android:fontFamily="@font/montserrat_extra_bold_italic"
            android:text="@string/news"
            android:textSize="38sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <Button
            android:id="@+id/btStatistics"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:background="@drawable/my_button"
            android:fontFamily="@font/montserrat_extra_bold_italic"
            android:text="@string/statistic"
            android:textSize="38sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <Button
            android:id="@+id/btSettings"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:background="@drawable/my_button"
            android:fontFamily="@font/montserrat_extra_bold_italic"
            android:text="@string/settings"
            android:textSize="38sp" />
    </LinearLayout>

</FrameLayout>