<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="@drawable/background_1"
    tools:context=".presentation.screens.TablesFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:visibility="visible">

        <TextView
            android:id="@+id/textView671"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_extra_bold_italic"
            android:text="@string/tables"
            android:textSize="62sp"
            android:textStyle="bold|italic" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="60dp" />

        <Button
            android:id="@+id/btRussia"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:background="@drawable/my_button"
            android:fontFamily="@font/montserrat_extra_bold_italic"
            android:text="@string/russia"
            android:textSize="38sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <Button
            android:id="@+id/btEngland"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:background="@drawable/my_button"
            android:fontFamily="@font/montserrat_extra_bold_italic"
            android:text="@string/england"
            android:textSize="38sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <Button
            android:id="@+id/btGermany"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:background="@drawable/my_button"
            android:fontFamily="@font/montserrat_extra_bold_italic"
            android:text="@string/germany"
            android:textSize="38sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <Button
            android:id="@+id/btSpain"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:background="@drawable/my_button"
            android:fontFamily="@font/montserrat_extra_bold_italic"
            android:text="@string/spain"
            android:textSize="38sp" />
    </LinearLayout>

</FrameLayout>