<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="@drawable/background_1">

    <TextView
        android:id="@+id/tvTittle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/montserrat_extra_bold_italic"
        android:gravity="center"
        android:text="@string/statistic_u"
        android:textSize="48sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btDefense"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/my_button"
        android:fontFamily="@font/montserrat_extra_bold_italic"
        android:letterSpacing="0.01"
        android:text="@string/defense"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/tvTittle"
        app:layout_constraintTop_toBottomOf="@+id/tvTittle" />

    <Button
        android:id="@+id/btAttack"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/my_button"
        android:letterSpacing="0.01"
        android:text="@string/attack"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/tvTittle"
        app:layout_constraintTop_toBottomOf="@+id/tvTittle" />


    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btDefense">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/black"
                android:orientation="horizontal"
                android:padding="2dp">

                <TextView
                    android:id="@+id/tvStTittle1"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    tools:text="Команда" />

                <TextView
                    android:id="@+id/tvStTittle2"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    tools:text="Турнир" />

                <TextView
                    android:id="@+id/tvStTittle3"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textColor="@color/white"
                    tools:text="Удары з.и." />

                <TextView
                    android:id="@+id/tvStTittle4"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textColor="@color/white"
                    tools:text="Отборы з.и." />

                <TextView
                    android:id="@+id/tvStTittle5"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textColor="@color/white"
                    tools:text="Перехваты з.и." />

                <TextView
                    android:id="@+id/tvStTittle6"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textColor="@color/white"
                    tools:text="Фолы з.и." />

                <TextView
                    android:id="@+id/tvStTittle7"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textColor="@color/white"
                    tools:text="Офсайды з.и." />

                <TextView
                    android:id="@+id/tvStTittle8"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textColor="@color/white"
                    tools:text="Рейтинг" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvStatistic"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_statistic" />
        </LinearLayout>
    </HorizontalScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>